--- a/recruiter/templates/recruiter/user_detail.html
+++ b/recruiter/templates/recruiter/user_detail.html
@@ -1,45 +1,17 @@
 {% extends 'recruiter/base.html' %}
 {% block content %}
-<div class="col-md-2"></div>
-<div class="col-md-8" style="margin-top:10px">
-    <div class="col-md-12">
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    {% if user.is_authenticated %}
-                    <a class="navbar-brand" href="#">{{ user.username | capfirst }}</a>
-                    {% endif %}    
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 
-                    <ul class="nav navbar-nav navbar-right">
-                        {% if user.is_authenticated %}
-                        <li><a href="{% url 'recruiter:logout' %}">Logout</a></li>
-                        {% else %}
-                        <li><a href="{% url 'recruiter:login' %}">Login</a></li>
-                        {% endif %}
-
-
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-    </div>
+   
+<div class="col-md-12">
+       <a href="{% url 'recruiter:home' %}" class="btn btn-default btn-sm">Back</a>
+       
+</div>
 
     <div class="col-md-12">
         <div class="panel panel-primary">
              <div class="panel-heading">Candidate Detail</div>
-            <div class="panel-body">
+            <div class="panel-body" style="overflow: scroll;height: 450px;">
                 <table class='table table-bordered'>    
                     {% for i in data %}
                     <tr>
@@ -56,5 +28,6 @@
             </div>
         </div>
     </div>
-</div>
+
+
 {% endblock %}
