--- a/recruiter/templates/recruiter/home.html
+++ b/recruiter/templates/recruiter/home.html
@@ -74,7 +74,21 @@
                       <button name="csv_genrate" class="btn btn-primary btn-sm">CSV</button>
                      {% endif %}
                 </form>
-            
+               <div class="pagination">
+                    <span class="step-links">
+                        {% if data.has_previous %}
+                        <a href="?page={{ data.previous_page_number }}">Previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                            Page {{ data.number }} of {{ data.paginator.num_pages }}.
+                        </span>
+
+                        {% if data.has_next %}
+                        <a href="?page={{ data.next_page_number }}">Next</a>
+                        {% endif %}
+                    </span>
+                </div>
                 
             </div>
         </div>
