--- a/recruiter/templates/recruiter/user_detail.html
+++ b/recruiter/templates/recruiter/user_detail.html
@@ -1,17 +1,19 @@
 {% extends 'recruiter/base.html' %}
 {% block content %}
 
-
-   
-<div class="col-md-12">
-       <a href="{% url 'recruiter:home' %}" class="btn btn-default btn-sm">Back</a>
-       
-</div>
-
-    <div class="col-md-12">
+ <div class="col-md-12">
         <div class="panel panel-primary">
-             <div class="panel-heading">Candidate Detail</div>
-            <div class="panel-body" style="overflow: scroll;height: 450px;">
+             <div class="panel-heading">
+              Candidate Detail
+    
+
+       <a href="{% url 'recruiter:home' %}" class="btn btn-default btn-sm pull-right" style="margin-top: -4px;">
+         <i class="fa fa-arrow-left"></i> Back
+        </a>
+       
+
+        </div>
+            <div class="panel-body">
                 <table class='table table-bordered'>    
                     {% for i in data %}
                     <tr>
