--- a/recruiter/templates/recruiter/base.html
+++ b/recruiter/templates/recruiter/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}" />
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
  <div class="col-md-12" style="margin-top: 10px;">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
